--- a/Frontend/css/produtos.css
+++ b/Frontend/css/produtos.css
@@ -1,12 +1,25 @@
 body {
-	background-color: #D9D9D9;
+	/**background-color: #D9D9D9;**/
+	background-color: black;
 }
 
 #container {
+	display: flex; /** Usando flexbox para configurar a altura das tags filhas **/
+	flex-direction: column;
+
 	padding: 30px;
+
+	height: 95vh;
 
 	background-color: #FBF8EC;
 	border-radius: 13px;
+}
+
+#cabecalho {
+	height: 100px;
+	
+	padding-top: 0;
+	padding-bottom: 0;
 }
 
 .botao button {
@@ -35,34 +48,30 @@ body {
 }
 
 #conteudo {
+	flex: 1; /** Para ocupar a altura restante**/
+	min-height: 0; /** Ajustar a tabela dentro do conteudo**/
+	
+	overflow: auto;
+
+	margin-top: 0;
+}
+
+#cabecalho-conteudo {
 	display: grid;
 	grid-template-columns: auto auto;
-	grid-template-areas: 
-	"item1 item2"
-	"item3 item3";
 
-	margin-top: 20px;
+	margin-top: 12px;
+	margin-bottom: 0;
+	padding-bottom: 0;
 }
 
-
-#conteudo #mostrar{
-	
-	grid-area: item1;
-}
-
-#conteudo #buscar{
-
-	grid-area: item2;
-
+#cabecalho-conteudo #buscar{
 	margin-left: auto;
 }
 
-#conteudo #tabela_conteudo{
-	border: 3px solid red;
-	grid-area: item3;
-
-	height: 60vh;
-	margin-top: 7px;
+#tabela_conteudo{
+	margin-top: 0;
+	padding-top: 0;
 }
 
 .inputError {
