--- a/Frontend/css/produtos.css
+++ b/Frontend/css/produtos.css
@@ -1,31 +1,52 @@
-body {
-	/**background-color: #D9D9D9;**/
-	background-color: black;
+html, body {
+	width: 100%;
+	height: 100%;
+
+	background-color: #D9D9D9;
+
+	overflow: hidden;
 }
 
 #container {
-	display: flex; /** Usando flexbox para configurar a altura das tags filhas **/
-	flex-direction: column;
+	display: grid;
+	height: clamp(350px, 80vh, 800px);
+	width: clamp(350px, 80vw, 950px);
 
-	padding: 30px;
-
-	height: 95vh;
+	margin: auto auto;
 
 	background-color: #FBF8EC;
 	border-radius: 13px;
+
+	grid-template-rows: 100px auto; /** Definindo um grid de duas rows com a primeira com 100px **/
+	padding: 30px;
 }
 
 #cabecalho {
-	height: 100px;
-	
 	padding-top: 0;
 	padding-bottom: 0;
+}
+
+#conteudo {
+	overflow: auto;
+
+	margin-top: 0;
+}
+
+#tabela_conteudo{
+	border: 2px solid gray;
+
+	height: 98%;
+
+	overflow-y: auto;
+	
+	margin-top: 0;
+	padding-top: 0;
 }
 
 .botao button {
 	display: flex;
 
-	gap: 17px;
+	gap: 13px;
 
 	align-items: center;
 
@@ -36,7 +57,7 @@ body {
 
 	padding: 10px;
 
-	font-size: 20px;
+	font-size: 15px;
 }
 
 .botao button:hover {
@@ -47,14 +68,6 @@ body {
 	transform: scale(0.97);
 }
 
-#conteudo {
-	flex: 1; /** Para ocupar a altura restante**/
-	min-height: 0; /** Ajustar a tabela dentro do conteudo**/
-	
-	overflow: auto;
-
-	margin-top: 0;
-}
 
 #cabecalho-conteudo {
 	display: grid;
@@ -69,10 +82,6 @@ body {
 	margin-left: auto;
 }
 
-#tabela_conteudo{
-	margin-top: 0;
-	padding-top: 0;
-}
 
 .inputError {
 	border-color: red;
